[project]
name = "api-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic==0.49.0",
    "fastapi==0.115.8",
    "loguru==0.7.3",
    "mcp==1.6.0",
    "numpy==2.2.1",
    "openai>=1.77.0",
    "traci>=1.23.0",
]
